# Medical-record-identification

./: .gitignore  README.md
asr_to_md_package/: README.md  download_models.py  pyproject.toml  requirements.txt  run_web.bat  setup.bat  transcribe_file.bat
asr_to_md_package/asr_md/: __init__.py  api.py  cli.py  core.py
asr_to_md_package/frontend/: index.html
asr_to_md_package/samples/: medical_consultation_sample.md
